log file truncation fix, datatables layout, prefer / over \\, get ready for 5.1.3

--- a/Move the content of this folder to the configured report root/css/bigipreportstyle.css
+++ b/Move the content of this folder to the configured report root/css/bigipreportstyle.css
@@ -1286,3 +1286,9 @@ span.adcLinkSpan a:hover {
 .paginate_button {
 	border-radius: var(--border-radius);
 }
+
+/* fix for jquery.daTables.css */
+.dataTables_filter {
+	width: inherit !important;
+	margin-right: 15px;
+}
